--- a/.gitignore
+++ b/.gitignore
@@ -129,14 +129,17 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-# Compiler files
+# Foundry
 cache/
 out/
-
-# Ignores development broadcast logs
 /broadcast
 /broadcast/*/31337/
 /broadcast/**/dry-run/
+
+#Hardhat files
+cache_hardhat/
+artifacts/
+typechain-types/
 
 # Docs
 docs/
